--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script language="javascript" type="text/javascript" src="libraries/p5.min.js"></script>
   <script language="javascript" type="text/javascript" src="sketch_240220b.js"></script>
   <!-- OK, YOU CAN MAKE CHANGES BELOW THIS LINE AGAIN -->
-
+  <script language="javascript" type="text/javascript" src="libraries/p5.sound.min.js"></script>
   <style>
     body {
       padding: 0;
